Resolves MUSARK-760 and MUSARK-767. Text inside autocomplete input fields where cropped on top/bottom depending on characters used in entered text.

--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ a:visited { color: #337ab7; }
 .react-autosuggest__input {
     width: 100%;
     height: 34px;
-    padding: 10px 20px;
+    padding: 6px 12px;
     font-family: Helvetica, sans-serif;
     font-weight: 300;
     font-size: 14px;
